# whatsapp-backend

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
chat/: models.py  serializers.py  urls.py  views.py
chat/management/commands/: process_payloads.py
